# nfactorial_python_dev

./: .gitignore
100_days_of_code_er_model_diagram_project_2/: README.md
100_days_of_code_er_model_diagram_project_2/100_days_of_code_solutions/: day_21.py  day_22.py  day_23.py  day_24.py  day_25.py  day_26.py  day_27.py  day_28.py  day_29.py  day_31.py  day_32.py  day_33.py  day_34.py  day_35.py  (+31 more)
ascii-art-project-1/: banner.txt  main.py
hw10-11/: README.md  hw.py  hw_bonus.py
hw12/: hw.py  hw_bonus.py  test_hw.py
hw13/: README.md  file.txt  requirements.txt
hw14/: README.md
hw15/: README.md  TODO.py  hw.py  test_hw.py
hw16/: hw.py
hw17/: hw.sql
hw2/: data.csv  data.txt  data_semicolon.csv  disk_usage.txt  error.txt  file_list.txt  filtered_data.txt  large_files.txt  line_count.txt  report.txt  secret_message.txt.gpg  unique_names.txt
hw6/: README.md  hw6.py
hw7/: hw.py  hw_bonus.py
hw8/: hw.py  hw_bonus.py
hw9/: hw.py  hw_bonus.py  test_hw_bonus.py
hw_backend1/: README.md
shanyraq_p1_backend_project_2/: README.md
shanyraq_p2_backend_project_3/: README.md  main.py  pyproject.toml  sql_app.db
shanyraq_p2_backend_project_3/app/: config.py
shanyraq_p2_backend_project_3/app/api/: auth.py  comments.py  listings.py
shanyraq_p2_backend_project_3/app/database/: database.py  models.py
shanyraq_p2_backend_project_3/app/repositories/: comments.py  listings.py  users.py
shanyraq_p2_backend_project_3/app/schemas/: comments.py  listings.py
test_task/: README.md  users.py
vox_pop_backend_project_1/: README.md  main.py  pyproject.toml
(+29 files in other folders)
